[package]
name = "h2-poll-traces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bytes = "1.4.0"
# http-body-util = "0.1.0-rc.2"
# http1 = "0.0.0"
hyper = "0.14.24"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
# tonic = "0.8.3"
# tonic-health = "0.8.0"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
